# ouranos

./: .dockerignore  .flake8  .gitignore  .yamllint  Dockerfile  README.md  docker-compose.yml  lint.sh  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: general.yml  release.yml  releast.yml
src/ouranos/node/: project_logging.py
tests/node/: test_project_logging.py
